--- a/server/views/tournament/details.ejs
+++ b/server/views/tournament/details.ejs
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %></h1>
+          <h1>Edit Tournament</h1>
             <form class="form" method="post">
               <div class="form-group">
                 <label for="NameTextField">Name</label>
