edited EDIT page and some height adjustments

--- a/server/views/tournament/details.ejs
+++ b/server/views/tournament/details.ejs
@@ -9,7 +9,7 @@
               <div class="form-group">
                 <label for="NameTextField">Name</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="Match Name" name="name" value="<%= tournament.Name %>" required>
+                placeholder="Creator's Name" name="name" value="<%= tournament.Name %>" required>
               </div>
               <div class="form-group">
                 <label for="sportsTextField">Sports</label>
@@ -19,17 +19,17 @@
               <div class="form-group">
                 <label for="DetailsTextField">Details</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="match details" name="details" value="<%= tournament.Details %>"  required>
+                placeholder="Match details" name="details" value="<%= tournament.Details %>"  required>
               </div>
               <div class="form-group">
                 <label for="MatchesTextField">Matches</label>
                 <input type="text" class="form-control" id="MatchesTextField"
-                placeholder="tournament Matches" name="matches" value="<%= tournament.Matches %>"  required>
+                placeholder="Tournament Matches" name="matches" value="<%= tournament.Matches %>"  required>
               </div>
               <div class="form-group">
                 <label for="PrizepoolTextField">Prizepool</label>
                 <input type="text" class="form-control" id="PrizepoolTextField"
-                placeholder="tournament Prizepool" name="prizepool" value="<%= tournament.Prizepool %>"  required>
+                placeholder="Tournament Prizepool" name="prizepool" value="<%= tournament.Prizepool %>"  required>
               </div>
 
 
