--- a/server/views/tournament/list.ejs
+++ b/server/views/tournament/list.ejs
@@ -1,5 +1,6 @@
 <% include ../partials/header.ejs %>
 
+<body style="height: max-content;">
     <!-- MAIN CONTENT -->
     <div class="container">
       <div class="row">
@@ -51,5 +52,6 @@
         </div>
       </div>
     </div>
+</body>
 
 <% include ../partials/footer.ejs %>
