--- a/server/views/content/index_form.ejs
+++ b/server/views/content/index_form.ejs
@@ -1,3 +1,14 @@
+<%/**
+
+ * index_form.ejs
+
+ * Due Date: March 18, 2022
+ * @link   index_form.ejs
+ * @file   This file defines the view to show the Login page.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
+
 <% include ../partials/header.ejs %>
 
 <div class="row justify-content-center">
