--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * header.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   header.ejs
+ * @file   This file defines the view of header part of the pages.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <!DOCTYPE html>
 <html>
