--- a/server/views/partials/header_head.ejs
+++ b/server/views/partials/header_head.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * header_head.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   header_head.ejs
+ * @file   This file defines the view of header part of the pages.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <title><%= title %></title>
 
