--- a/server/views/partials/header_page.ejs
+++ b/server/views/partials/header_page.ejs
@@ -1,3 +1,14 @@
+<%/**
+ * header_page.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   header_page.ejs
+ * @file   This file defines the view of header part of the pages.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
+
+
 <!-- Begin Header -->
 <header class="header">
     <nav class="navbar fixed-top">
