--- a/server/views/partials/header_preloader.ejs
+++ b/server/views/partials/header_preloader.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * header_preloader.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   header_preloader.ejs
+ * @file   This file defines the view of header preloader.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <!-- Begin Preloader -->
 <div id="preloader">
