--- a/server/views/tournament/details.ejs
+++ b/server/views/tournament/details.ejs
@@ -1,3 +1,13 @@
+<%/**
+ * details.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   details.ejs
+ * @file   This file defines the registeration page.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
+
 <% include ../partials/header.ejs %>
 
     <!-- MAIN CONTENT -->
