--- a/server/views/tournament/list.ejs
+++ b/server/views/tournament/list.ejs
@@ -1,3 +1,14 @@
+<%/**
+ * list.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   list.ejs
+ * @file   This file defines the add, edit and delete button.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
+
+
 <% include ../partials/header.ejs %>
 
 <body style="height: max-content;">
