--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * index.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   index.ejs
+ * @file   This file defines the view of Landing page.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <% include ../partials/header.ejs %>
 
