--- a/server/views/partials/footer_js.ejs
+++ b/server/views/partials/footer_js.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * footer_js.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   footer_js.ejs
+ * @file   This file defines the view of bottom part of the pages.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <script src="/Scripts/app.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
