--- a/server/views/partials/footer_page.ejs
+++ b/server/views/partials/footer_page.ejs
@@ -1,4 +1,13 @@
- 
+ <%/**
+ * footer_page.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   footer_page.ejs
+ * @file   This file defines the view of bottom part of the pages.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
+
 <footer class="main-footer fixed-footer" >
     <div class="row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-xl-start justify-content-lg-start justify-content-md-start justify-content-center">
