--- a/server/views/partials/header_sidebar.ejs
+++ b/server/views/partials/header_sidebar.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * header_sidebar.ejs
+ * Due Date: March 18, 2022
+ *
+ * @link   header_sidebar.ejs
+ * @file   This file defines the view of header sidebar.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <!-- Begin Side Navbar -->
 <nav class="side-navbar box-scroll sidebar-scroll bg-dark">
