Comments on files

--- a/server/views/tournament/details.ejs
+++ b/server/views/tournament/details.ejs
@@ -3,7 +3,7 @@
  * Due Date: March 18, 2022
  *
  * @link   details.ejs
- * @file   This file defines the registeration page.
+ * @file   This file defines the form to show in the Tournament Add/Edit Page.
  * @author DevSports
  * @since  1.0.0
  */%>
