--- a/server/views/tournament/list.ejs
+++ b/server/views/tournament/list.ejs
@@ -3,7 +3,7 @@
  * Due Date: March 18, 2022
  *
  * @link   list.ejs
- * @file   This file defines the add, edit and delete button.
+ * @file   This file defines the Tournament List Page with a grid and some buttons (add, edit and delete).
  * @author DevSports
  * @since  1.0.0
  */%>
