--- a/server/views/tournament/list.ejs
+++ b/server/views/tournament/list.ejs
@@ -18,7 +18,7 @@
         <div class="col-md-offset-1 col-md-10">
           <h3>Tournaments </h3>
           <!-- Add button -->
-          <a href="/tournament/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add Tournaments</a>
+          <a href="/tournament/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add Tournament</a>
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
