--- a/server/views/tournament/details.ejs
+++ b/server/views/tournament/details.ejs
@@ -19,27 +19,27 @@
               <div class="form-group">
                 <label for="NameTextField">Name</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="Creator's Name" name="name" value="<%= tournament.Name %>" required>
+                placeholder="Creator's Name" name="name" required>
               </div>
               <div class="form-group">
                 <label for="sportsTextField">Sports</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="Sports" name="sports" value="<%= tournament.Sports %>"  required>
+                placeholder="Sports" name="sports"   required>
               </div>
               <div class="form-group">
                 <label for="DetailsTextField">Details</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="Match details" name="details" value="<%= tournament.Details %>"  required>
+                placeholder="Match details" name="details"   required>
               </div>
               <div class="form-group">
                 <label for="MatchesTextField">Matches</label>
                 <input type="text" class="form-control" id="MatchesTextField"
-                placeholder="Tournament Matches" name="matches" value="<%= tournament.Matches %>"  required>
+                placeholder="Tournament Matches" name="matches"   required>
               </div>
               <div class="form-group">
                 <label for="PrizepoolTextField">Prizepool</label>
                 <input type="text" class="form-control" id="PrizepoolTextField"
-                placeholder="Tournament Prizepool" name="prizepool" value="<%= tournament.Prizepool %>"  required>
+                placeholder="Tournament Prizepool" name="prizepool"   required>
               </div>
 
 
