--- a/server/views/partials/header_head.ejs
+++ b/server/views/partials/header_head.ejs
@@ -24,6 +24,7 @@ WebFont.load({
 <!-- CSS SECTION -->
 <link rel='stylesheet' href='/Content/app.css' />
 
+
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="/Assets/images/DevSports.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/Assets/images/DevSports.png">
@@ -35,6 +36,7 @@ WebFont.load({
 <link rel="stylesheet" href="/Scripts/lib/elisyam-theme/vendors/css/base/elisyam-1.5.css">
 <link rel="stylesheet" href="/Scripts/lib/elisyam-theme/css/lity/lity.min.css">
 <link rel="stylesheet" href="/Scripts/lib/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
 
 <!-- Tweaks for older IEs--><!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
