--- a/server/views/partials/header_page.ejs
+++ b/server/views/partials/header_page.ejs
@@ -24,7 +24,8 @@
                         <img src="/Assets/images/DevSports.png" alt="logo" style="width: 200px;" class="logo-small">
                     </div>
                 </a>
-                
+
+  
                 <!-- Toggle Button -->
                 <a id="toggle-btn" href="#" class="menu-btn active">
                     <span></span>
@@ -35,12 +36,21 @@
                 <!-- End Toggle -->
             </div>
             <!-- End Logo -->
-            <div  class="blinking" >
-                <p  style= "font-size: xxx-large; font-style: italic; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; ">
-                    Never give up!
-                </p>
-            </div>
 
+        <div >
+            <p class="navbar-text" style= "font-size: xxx-large; font-style: italic; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Never give up!
+            </p>
+        </div>
+    <div style = "position:relative; right:20px; top:2px;">
+        <ul class="navbar-nav">
+                <% if(typeof displayName == 'string' && displayName) { %>
+                    <li class="navbar-text"><i class="fas fa-lg fa-user"></i> Welcome, <%= displayName %></li>
+                    <li class="nav-item"><a href="/logout" class="nav-link"></i>Logout</a></li>
+                <% } else { %>
+                    <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+                <% } %>
+        </ul>
+    </div>
         </div>
         <!-- End Topbar -->
     </nav>
