--- a/server/views/tournament/list.ejs
+++ b/server/views/tournament/list.ejs
@@ -8,53 +8,71 @@
  * @since  1.0.0
  */%>
 
-
+ <% if(typeof displayName == 'string' && displayName) { %> 
 <% include ../partials/header.ejs %>
 
-<body style="height: max-content;">
+<main style="height: max-content;">
     <!-- MAIN CONTENT -->
     <div class="container">
       <div class="row">
         <div class="col-md-offset-1 col-md-10">
           <h3>Tournaments </h3>
+          <% if(typeof displayName == 'string' && displayName) { %>
           <!-- Add button -->
-          <a href="/tournament/add" class="btn btn-primary"><i class="fa fa-plus"></i> Add Tournament</a>
+          <a href="/tournament/add" class="btn btn-primary" role="button">
+            <i class="fa fa-plus"></i> Add Tournament</a>
+          <% } %>
           <br>
           <div class="table-responsive">
             <table class="table table-bordered table-striped table-hover">
-              <thead>
+              
                 <tr>
-                  <th>Name</th>
-                  <th class="text-center">Sports</th>
-                  <th class="text-center">Details</th>
-                  <th class="text-center">Matches</th>
-                  <th class="text-center">Prizepool</th>
-                  <th class="text-center"></th>
-                  <th class="text-center"></th>
+                <% if(typeof displayName == 'string' && displayName) { %>
+                  <th class="text-center" scope="col">Name</th>
+                  <th class="text-center" scope="col">Sports</th>
+                  <th class="text-center" scope="col">Details</th>
+                  <th class="text-center" scope="col">Matches</th>
+                  <th class="text-center" scope="col">Prizepool</th>
+                  <th class="text-center" scope="col"></th>
+                  <th class="text-center" scope="col"></th>
+                <% } else { %>
+                  <th class="text-center" scope="col">Name</th>
+                  <th class="text-center" scope="col">Sports</th>
+                  <th class="text-center" scope="col">Details</th>
+                  <th class="text-center" scope="col">Matches</th>
+                  <th class="text-center" scope="col">Prizepool</th>
+                <% } %>
                 </tr>
-                </thead>
-                <tbody>
+               
+               
                 <!-- Template Row -->
-                <% for (let count = 0; count < tournament.length; count++) { %>
+              <% for (let count = 0; count < tournamentList.length; count++) { %>
                 <tr>
-                  <td><%= tournament[count].Name %></td>
-                  <td class="text-center"><%= tournament[count].Sports %></td>
-                  <td class="text-center"><%= tournament[count].Details %></td>
-                  <td class="text-center"><%= tournament[count].Matches %></td>
-                  <td class="text-center">$<%= tournament[count].Prizepool %> CAD</td>
+                <% if(typeof displayName == 'string' && displayName) { %>
+                  <td class="text-center"><%= tournamentList[count].Name %></td>
+                  <td class="text-center"><%= tournamentList[count].Sports %></td>
+                  <td class="text-center"><%= tournamentList[count].Details %></td>
+                  <td class="text-center"><%= tournamentList[count].Matches %></td>
+                  <td class="text-center">$<%= tournamentList[count].Prizepool %> CAD</td>
                   
                   <!-- Edit button -->
                   <td class="text-center">
-                    <a href="tournament/<%= tournament[count]._id %>"+count class="btn btn-primary"><i class="fa fa-plus"></i> Edit</a>
+                    <a href="/tournament/edit/<%= tournamentList[count]._id %>"class="btn btn-primary"><i class="fa fa-plus"></i> Edit</a>
                   </td>
                   
                   <!-- Delete button -->
                   <td class="text-center">
-                    <a href="tournament/delete/<%= tournament[count]._id %>" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Delete</a>
+                    <a href="/tournament/delete/<%= tournamentList[count]._id %>" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Delete</a>
                   </td>
-                </tr>
+                <% } else { %>
+                  <td class="text-center"><%= tournamentList[count].Name %></td>
+                  <td class="text-center"><%= tournamentList[count].Sports %></td>
+                  <td class="text-center"><%= tournamentList[count].Details %></td>
+                  <td class="text-center"><%= tournamentList[count].Matches %></td>
+                  <td class="text-center">$<%= tournamentList[count].Prizepool %> CAD</td>
                 <% } %>
-              </tbody>
+                </tr>
+              <% } %> 
             </table>
           </div>
            <div class="col-md-offset-1 col-md-10 text-center">
@@ -63,6 +81,11 @@
         </div>
       </div>
     </div>
-</body>
+  
+  </main>
 
 <% include ../partials/footer.ejs %>
+
+<% } else { %>
+  <script> document.location.href = '/login' </script>
+<% } %>  
