--- a/server/views/partials/header_sidebar.ejs
+++ b/server/views/partials/header_sidebar.ejs
@@ -16,12 +16,14 @@
             <a href="/">
                 <i class="la la-home"></i><span>Home</span>
             </a>
-        </li>
+        </li>        
+        <% if(typeof displayName == 'string' && displayName) { %> 
         <li>
             <a href="/tournament">
                 <i class="la la-trophy"></i><span>Tournaments</span>
             </a>
         </li>
+        <% } %>
     </ul>
     <!-- End Main Navigation -->
 </nav>
