Add comments on files and delete some things.

--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,5 +1,14 @@
-<%- include ../partials/header.ejs %>
+<%/**
+ * login.ejs
+ * Due Date: March 29, 2022
+ *
+ * @link   login.ejs
+ * @file   This file defines the form to show the Login Page.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
  
+<%- include ../partials/header.ejs %>
 
 <div class="row justify-content-center">
     <div class="col-xl-11">
