--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,3 +1,13 @@
+<%/**
+ * register.ejs
+ * Due Date: March 29, 2022
+ *
+ * @link   register.ejs
+ * @file   This file defines the form to show the Register Page.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
+
 <%- include ../partials/header.ejs %>
 
 
