--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,3 +1,12 @@
+<%/**
+ * footer.ejs
+ * Due Date: March 18, 2022
+
+ * @link   footer.ejs
+ * @file   This file defines the view of footer.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
           <!-- Begin Page Footer-->
           <% include ../partials/footer_page.ejs %>
