--- a/server/views/tournament/edit.ejs
+++ b/server/views/tournament/edit.ejs
@@ -1,4 +1,12 @@
-
+<%/**
+ * edit.ejs
+ * Due Date: March 29, 2022
+ *
+ * @link   edit.ejs
+ * @file   This file defines the form to show the Tournament Edit Page.
+ * @author DevSports
+ * @since  1.0.0
+ */%>
 
 <% if(typeof displayName == 'string' && displayName) { %> 
         
