--- a/server/views/tournament/details.ejs
+++ b/server/views/tournament/details.ejs
@@ -1,9 +1,9 @@
 <%/**
  * details.ejs
- * Due Date: March 18, 2022
+ * Due Date: March 29, 2022
  *
  * @link   details.ejs
- * @file   This file defines the form to show in the Tournament Add/Edit Page.
+ * @file   This file defines the form to show the Tournament Add Page.
  * @author DevSports
  * @since  1.0.0
  */%>
